--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 envlist = py27, py33, py34, py35, py36
 
 [testenv]
-passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
+passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH AZURE_AUTH_LOCATION
 deps =
     -rrequirements-dev.txt
 commands =
