Upload coverage to Codacy

--- a/tox.ini
+++ b/tox.ini
@@ -7,3 +7,4 @@ deps =
     -rrequirements-dev.txt
 commands =
     coverage run --source=azurekit -m py.test test/
+    python-codacy-coverage -r coverage.xml
