Upload coverage.xml to Codacy

--- a/tox.ini
+++ b/tox.ini
@@ -7,4 +7,5 @@ deps =
     -rrequirements-dev.txt
 commands =
     coverage run --source=azurekit -m py.test test/
+    coverage xml
     python-codacy-coverage -r coverage.xml
